# proyecto_fiinal1

./: Enunciado.ipynb  Guía.ipynb  README.md  dockerfile  main.py  pyproject.toml
Proyecto-final/: LICENSE
app/: app.py  desarrollo.ipynb  evaluation.py  fuentes.py  main.py  preprocessing.py  requirements.txt
app/.gradio/flagged/: dataset1.csv
data/: df.csv  zip_code.csv
docs/: memoria.md
models/: RF3(0.79 acu)  model_config.yaml
notebooks/: 01_Fuentes.ipynb  02_LimpiezaEDA.ipynb  03_Entrenamiento_Evaluacion.ipynb  fuentes.py
src/: evaluation.py  preprocessing.py  training.py
