[project]
name = "proyecto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.12.4",
    "ipykernel>=6.30.0",
    "keras>=3.11.0",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "regex>=2025.7.31",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "skrub>=0.6.0",
    "statsmodels>=0.14.5",
    "tensorflow>=2.19.0",
]
